--- a/index.html
+++ b/index.html
@@ -1,16 +1,254 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
-        <title>Hello World</title>
-        <link rel="icon" type="image/x-icon" href="./resources/images/favicon.ico">
-    </head>
+<html lang="en">
 
-    <body>
-        <h1>Hello World</h1>
-    </body>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>Capsule - Receiving Tool</title>
+    <link rel="icon" type="image/x-icon" href="./resources/images/favicon.ico">
+</head>
 
-    <footer>
-        <h6>Goodbye World</h6>
-    </footer>
+<body>
+    <div class="invoices">
+        <input class="inv-search" placeholder="Search Invoices">
+
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+        <button>
+            <table class="invoice">
+                <tr class="ind-inv-img">
+                    <th rowspan="4">
+                        <img class="inv-vendor-image" src="./resources/images/ABC.png">
+                    </th>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="vendor">Amerisource Bergen</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="date-time">12/31/2021</td>
+                </tr>
+
+                <tr class="ind-inv-info">
+                    <td class="invoice-number">Invoice: 1234567890</td>
+                </tr>
+            </table>
+        </button>
+    </div>
+
+    <div class="scan-items">
+        <table class="scan-table">
+            <tr>
+                <th style="width: 10%;" abbr="National Drug Code">NDC</th>
+                <th style="width: 40%;">Item Name</th>
+                <th style="width: 10%;" abbr="Serial Number">Serial #</th>
+                <th style="width: 10%;">Bin</th>
+                <th style="width: 05%;" abbr="Quantity">Qty</th>
+                <th style="width: 10%;" abbr="Expiration Date">Exp</th>
+                <th style="width: 05%;" abbr="Lot Number">Lot</th>
+                <th style="width: 05%;" abbr="Delete">Del</th>
+                <th style="width: 05%;" abbr="Capsule Preference">Pref</th>
+            </tr>
+
+            <tr>
+                <td>12345123412</td>
+                <td>Test Item 20 mg</td>
+                <td>Q3T8XNN449</td>
+                <td>Topical</td>
+                <td>1</td>
+                <td>02/24</td>
+                <td>FJ002</td>
+                <td>✖</td>
+                <td>✓</td>
+            </tr>
+            <tr>
+                <td>12345123412</td>
+                <td>Test Item 20 mg</td>
+                <td>Q3T8XNN449</td>
+                <td>Topical</td>
+                <td>1</td>
+                <td>02/24</td>
+                <td>FJ002</td>
+                <td>✖</td>
+                <td>✓</td>
+            </tr>
+            <tr>
+                <td>12345123412</td>
+                <td>Test Item 20 mg</td>
+                <td>Q3T8XNN449</td>
+                <td>Topical</td>
+                <td>1</td>
+                <td>02/24</td>
+                <td>FJ002</td>
+                <td>✖</td>
+                <td>✓</td>
+            </tr>
+            <tr>
+                <td>12345123412</td>
+                <td>Test Item 20 mg</td>
+                <td>Q3T8XNN449</td>
+                <td>Topical</td>
+                <td>1</td>
+                <td>02/24</td>
+                <td>FJ002</td>
+                <td>✖</td>
+                <td>✓</td>
+            </tr>
+            <tr>
+                <td>12345123412</td>
+                <td>Test Item 20 mg</td>
+                <td>Q3T8XNN449</td>
+                <td>Topical</td>
+                <td>1</td>
+                <td>02/24</td>
+                <td>FJ002</td>
+                <td>✖</td>
+                <td>✓</td>
+            </tr>
+            <tr>
+                <td>12345123412</td>
+                <td>Test Item 20 mg</td>
+                <td>Q3T8XNN449</td>
+                <td>Topical</td>
+                <td>1</td>
+                <td>02/24</td>
+                <td>FJ002</td>
+                <td>✖</td>
+                <td>✓</td>
+            </tr>
+        </table>
+
+        <input class="scan-in" placeholder="Scan Items Here">
+    </div>
+</body>
+
+<footer>
+
+</footer>
+
 </html>
