--- a/index.html
+++ b/index.html
@@ -3,14 +3,174 @@
     <head>
         <title>Capsule Order Receiving Tool</title>
         <link href="./resources/css/style.css" rel="stylesheet">
+        <link href="./resources/css/navbar.css" rel="stylesheet">
+        <link href="./resources/css/sidebar.css" rel="stylesheet">
+        <link href="./resources/css/scan-table.css" rel="stylesheet">
         <script src="./resources/js/script.js"></script>
     </head>
 
     <body>
+<!-- Navbar -->
+
+        <div id="nav-div">
+            <div class="nav" id="capsule-logo-div" onclick="openNav()">
+                <div id="capsule-top"></div>
+                <div id="capsule-right"></div>
+                <div id="capsule-bottom"></div>
+                <div id="capsule-left"></div>
+                <div id="capsule-top-triangle"></div>
+                <div id="capsule-bottom-triangle"></div>
+            </div>
+
+            <div class="nav" id="home">
+                <a id="home-link" href="#">Home</a>
+            </div>
+
+            <div class="nav" id="invoice">
+                <a id="invoice-link" href="#">Invoice</a>
+                <div class="nav-dropdown" id="invoice-dropdown">
+                    <a class="invoice-dropdown-links" id="upload-inv-link" href="#">Upload Invoices</a>
+                    <a class="invoice-dropdown-links" id="adv-inv-search-link" href="#">Advanced Invoice Search</a>
+                    <hr>
+                    <a class="invoice-dropdown-links" id="adv-inv-search-link" href="#">Submit Invoices</a>
+                </div>
+            </div>
+
+            <div class="nav" id="item">
+                <a id="item-link" href="#">Item</a>
+                <div class="nav-dropdown" id="item-dropdown">
+                    <a class="item-dropdown-links" id="edit-item-link" href="#">Edit Item</a>
+                </div>
+            </div>
+
+            <div class="nav" id="scan">
+                <a id="scan-link" href="#">Scan</a>
+                <div class="nav-dropdown" id="scan-dropdown">
+                    <a class="scan-dropdown-links" id="fix-scanner-link" href="#">Fix Scanner</a>
+                </div>
+            </div>
+
+            <div class="nav" id="tools">
+                <a id="tools-link" href="#">Tools</a>
+                <div class="nav-dropdown" id="tools-dropdown">
+                    <a class="tools-dropdown-links" id="cycle-count-link" href="#">Cycle Count</a>
+                    <a class="tools-dropdown-links" id="pill-id-link" href="#">Pill Identification</a>
+                </div>
+            </div>
+
+            <div class="nav" id="account">
+                <a id="account-link" href="#">Account</a>
+                <div class="nav-dropdown" id="account-dropdown">
+                    <a class="account-dropdown-links" id="gmail-login-link" href="#">Sign In with Gmail</a>
+                    <a class="account-dropdown-links" id="history-link" href="#">Account History</a>
+                    <a class="account-dropdown-links" id="logout-link" href="#">Logout</a>
+                </div>
+            </div>
+        </div>
+
+<!-- End Navbar -->
+<!-- Sidebar -->
+        
         <div id="sidebar-background-filter" onclick="closeNav()"></div>
-        <img id="capsule-logo-spacer" src="./resources/images/capsule-logo.webp" onclick="openNav()">
-        <iframe src="./navbar.html" id="navbar-iframe"></iframe>
-        <iframe src="./sidebar.html" id="sidebar-iframe"></iframe>
-        <iframe src="./scan.html" id="scan-iframe"></iframe>
+        <div id="sidebar">
+            <div id="search">
+                <input placeholder="Search Invoices..." id="invoice-search-bar">
+
+                <div class="invoice-search-sliders">
+                    <input type="checkbox" id="open-invoice-slider" class="invoice-slider" name="open-invoice-slider" checked>
+                    <label for="open-invoice-slider">Show Open Invoices</label>
+                </div>
+
+                <div class="invoice-search-sliders">
+                    <input type="checkbox" id="closed-invoice-slider" class="invoice-slider" name="closed-invoice-slider">
+                    <label for="closed-invoice-slider">Show Closed Invoices</label>
+                </div>
+            </div>
+
+            <div class="invoice-upload">
+                <ul class="invoice-upload-text">
+                    <li class="invoice-upload-text-all invoice-upload-text-plus">+</li>
+                    <li class="invoice-upload-text-all invoice-upload-text-general">Upload Invoices</li>
+                </ul>
+            </div>
+
+            <div class="invoice-list">
+                <ul class="invoice">
+                    <img class="vendor-image" src="./resources/images/ABC.png">
+                    <div class="vendor-info">
+                        <li class="vendor-name">
+                            Amerisource Bergen
+                        </li>
+                        <li class="invoice-number">
+                            1234567890
+                        </li>
+                        <li class="invoice-date">
+                            01/01/1990 00:00
+                        </li>
+                    </div>
+                </ul>
+            </div>
+
+            <div id="close-sidebar" onclick="closeNav()">
+                <div id="close-sidebar-x">
+                    <div id="sidebar-x-1"></div>
+                    <div id="sidebar-x-2"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Scan Table -->
+        <div id="scan-table-div">
+            <table id="scan-table">
+                <thead id="scan-table-head">
+                    <tr id="scan-table-head-row">
+                        <th class="scan-table-head-row-1-item" id="scan-table-head-row-expand"></th>
+                        <th class="scan-table-head-row-1-item" id="scan-table-head-row-ndc">NDC</th>
+                        <th class="scan-table-head-row-1-item" id="scan-table-head-row-item-name">Item Name</th>
+                        <th class="scan-table-head-row-1-item" id="scan-table-head-row-bin">Bin</th>
+                        <th class="scan-table-head-row-1-item" id="scan-table-head-row-quantity">Quantity</th>
+                        <th class="scan-table-head-row-1-item" id="scan-table-head-row-capsule-preference">Capsule Preference</th>
+                    </tr>
+                </thead>
+
+                <tbody class="scan-table-body">
+                    <tr class="scan-table-body-row">
+                        <td class="scan-table-body-data">
+                            <div class="scan-table-body-expand-button" onclick="openChild()">
+                                <div class="scan-table-body-expand-button-vertical"></div>
+                                <div class="scan-table-body-expand-button-horizontal"></div>
+                            </div>
+                        </td>
+                        <td>12345-1234-12</td>
+                        <td>Random Item Name</td>
+                        <td>Item Bin</td>
+                        <td>1 / 50</td>
+                        <td>✓</td>
+                        <table id="child-table">
+                            <thead class="child-table-head">
+                                <tr class="child-table-head-row">
+                                    <th class="scan-table-head-row-2-item" id="scan-table-head-row-serial-number">Serial Number</th>
+                                    <th class="scan-table-head-row-2-item" id="scan-table-head-row-expiration-date">Expiration Date</th>
+                                    <th class="scan-table-head-row-2-item" id="scan-table-head-row-lot">Lot</th>
+                                    <th class="scan-table-head-row-2-item" id="scan-table-head-row-invoice-number">Invoice Number</th>
+                                    <th class="scan-table-head-row-2-item" id="scan-table-head-row-invoice-date">Invoice Date</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>12345678901234567890</td>
+                                    <td>01/2022</td>
+                                    <td>12345678901234567890</td>
+                                    <td>12345678901234567890</td>
+                                    <td>01/01/2022</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </body>
 </html>
